﻿sqlcon release notes

9/25/2020 v2.2.14.0
	Improvements/Enhancements:
	1. command "run" supports searching paths which is similar with Windows environment variable "PATH"

9/23/2020 v2.2.13.0
	Improvements/Enhancements:
	1. command "export /l2s" support code-style: pascal|camel|original
	2. class Configuration is exposed which can be used as API in syscore.dll

8/19/2020 v2.2.12.0
	Improvements/Enhancements:
	1. command "execute" support batch-size to improve performace in very large Sql script file
	   use command:
	   execute file-name.sql /batch-size:1000 /verbose

7/19/2020 v2.2.11.0
	Improvements/Enhancements:
	1. Improve table schema, change column property to NOT NULL, INT, BIT or shrink column size with string type if it is possible.
	   use command:
	   attrib /refine

4/21/2020 v2.2.10.0
	Improvements/Enhancements:
	1. Generate method like public static bool Keyxxxx(bool value = default(bool)) in command export .cfg to C# class
	2. Generate JSON array without table-name wrapped when option /exclude-name is used.

	Bug Fixes:
	1. cannot redirect console into stream when 3rd party software accesses sqlcon.exe
	2. cannot generate CRUD SQL clauses when database provider is XML file.


4/4/2020 v2.2.9.0
	Bug Fixes:
	1. cannot export data contract class correctly when column contains invalid letters

3/15/2020 v2.2.8.0
	Improvements/Enhancements:
	1. command: export /json [/ds-name:DataSetName] [/dt-names:DataTableName1,DataTableName2,...] [/out:directroy]|[/out:filename]

1/21/2019 v2.2.7.0
	Improvements/Enhancements:
	1. compare number of table rows.
	Examples:
	  compare ~\product /count
	
	Bug Fixes:
	1. cannot bulk copy if table schema is not dbo

11/1/2019 v2.2.6.0
	Improvements/Enhancements:
	1. add command to export constant class 
	2. for example:
	   export /c# /type:const /field:col1,col2 /value:col3,col4

9/12/2019 v2.2.5.0
	Improvements/Enhancements: