@@ -2,7 +2,10 @@
 
 9/25/2020 v2.2.14.0
 	Improvements/Enhancements:
-	1. command "run" supports searching paths which is similar with Windows environment variable "PATH"
+	1. new command "path" It is similar with Windows environment variable "PATH"
+	   path c:\bin;c:\program files\sqlcon
+	   path {path};d:\bin
+	2. command "run" supports searching paths 
 
 9/23/2020 v2.2.13.0
 	Improvements/Enhancements:
